[gd_scene load_steps=4 format=3 uid="uid://bmihvde6c5d4e"]

[ext_resource type="Texture2D" uid="uid://dq5egijd1gu4v" path="res://art/survivalgame-appletree.png" id="1_brfkd"]
[ext_resource type="Script" uid="uid://oqicmdd2bnm1" path="res://scripts/tree.gd" id="1_nnvrw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brfkd"]
size = Vector2(59, 76)

[node name="Tree" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_nnvrw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(30, 38)
scale = Vector2(2.3, 2.2999997)
texture = ExtResource("1_brfkd")
region_enabled = true
region_rect = Rect2(48, 2.026, 25, 32.837)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(29.5, 38)
shape = SubResource("RectangleShape2D_brfkd")

[node name="DropTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="AppleRipeTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_recharge_timer_timeout"]
[connection signal="timeout" from="AppleRipeTimer" to="." method="_on_apple_ripe_timer_timeout"]
